feat: :sparkles: upsert market and best price
