# src/market/domain/models.go
@@ -5,5 +5,12 @@ type Market struct {
 	ExchangeMarketIdentifier string
 	ExchangeName             string
 	MarketName               string
+	MegaMarketID             uint
 	IsActive                 bool
+}
+
+type MegaMarket struct {
+	ID                  uint
+	ExchangeMarketNames string
+	IsActive            bool
 }
